[gd_scene load_steps=4 format=3 uid="uid://brmlbplc7811i"]

[ext_resource type="Script" uid="uid://bvsfdwnnqqupd" path="res://game_secret.gd" id="1_csstf"]
[ext_resource type="Script" uid="uid://xs4sxg83q0bc" path="res://save_secret.gd" id="1_jfdl7"]
[ext_resource type="Script" uid="uid://bv4lixjyomvoa" path="res://read_secret.gd" id="2_csstf"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_csstf")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 66.0
offset_right = 598.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 60
text = "Tallenna pisteesi"

[node name="LogoutButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1003.0
offset_top = 4.0
offset_right = 1146.0
offset_bottom = 49.0
text = "Kirjaudu ulos"

[node name="Save" type="Node" parent="."]
script = ExtResource("1_jfdl7")

[node name="ColorRect" type="ColorRect" parent="Save"]
offset_left = 206.0
offset_top = 267.0
offset_right = 517.0
offset_bottom = 531.0
color = Color(0.5176471, 0.13725491, 0.9529412, 1)
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="Save"]
unique_name_in_owner = true
offset_left = 248.0
offset_top = 313.0
offset_right = 306.0
offset_bottom = 336.0
text = "Nimi:"
metadata/_edit_use_anchors_ = true

[node name="NameLineEdit" type="LineEdit" parent="Save"]
unique_name_in_owner = true
offset_left = 324.0
offset_top = 312.0
offset_right = 487.0
offset_bottom = 343.0
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="Save"]
unique_name_in_owner = true
offset_left = 247.0
offset_top = 374.0
offset_right = 305.0
offset_bottom = 397.0
text = "Pisteet:"
metadata/_edit_use_anchors_ = true

[node name="ScoreLineEdit" type="LineEdit" parent="Save"]
unique_name_in_owner = true
offset_left = 324.0
offset_top = 372.0
offset_right = 486.0
offset_bottom = 403.0
metadata/_edit_use_anchors_ = true

[node name="SaveButton" type="Button" parent="Save"]
offset_left = 251.0
offset_top = 444.0
offset_right = 390.0
offset_bottom = 491.0
text = "Tallenna"
metadata/_edit_use_anchors_ = true

[node name="InfoLabel" type="Label" parent="Save"]
unique_name_in_owner = true
offset_left = 215.0
offset_top = 505.0
offset_right = 506.0
offset_bottom = 528.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Read" type="Node" parent="."]
script = ExtResource("2_csstf")

[node name="ColorRect" type="ColorRect" parent="Read"]
offset_left = 737.0
offset_top = 57.0
offset_right = 1051.0
offset_bottom = 592.0
color = Color(0.5254902, 0.4862745, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Read"]
unique_name_in_owner = true
offset_left = 781.0
offset_top = 83.0
offset_right = 1050.0
offset_bottom = 495.0
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Read"]
offset_left = 789.0
offset_top = 66.0
offset_right = 992.0
offset_bottom = 134.0
metadata/_edit_use_anchors_ = true

[node name="ReadButton" type="Button" parent="Read"]
offset_left = 825.0
offset_top = 515.0
offset_right = 965.0
offset_bottom = 557.0
text = "Hae tulokset"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="LogoutButton" to="." method="_on_logout_button_pressed"]
[connection signal="pressed" from="Save/SaveButton" to="Save" method="_on_save_button_pressed"]
[connection signal="pressed" from="Read/ReadButton" to="Read" method="_on_read_button_pressed"]
